--- a/style.css
+++ b/style.css
@@ -88,3 +88,19 @@ button:active {
 #superficie {
     font-weight:bold;
 }
+
+#id {
+    font-weight: bold;
+}
+
+#flujo{
+    font-weight: lighter;
+}
+
+#flujo_medio {
+    font-weight: lighter;
+}
+
+#volumen {
+    font-weight: lighter;
+}
