--- a/style.css
+++ b/style.css
@@ -42,21 +42,23 @@ body {
     padding: 30px;
 }
 
-input {
+input.item {
     width: 70%;
     padding: 12px 15px;
-    border: none;
-    background-color: #eee;
+    border: 1px solid #0000001c;
+    background-color: #eeeeee7e;
     margin: 20px 0px;
+    font-weight: bold;
+    font-size: 15px;        
 }
 
 button {
     font-size: 15px;
     font-weight: bold;
-    padding: 12px 20px;
-    border-radius: 0px;
-    background-color: #1a8055;
-    border: 1px solid #1a8055;
+    padding: 10px 12px;
+    border-radius: 6px;
+    background-color: #1a8056d3;
+    border: 1px solid #1a805633;
     color: #FFFFFF;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -67,6 +69,19 @@ button:active {
     transform: scale(0.95);
 }
 
+#id select {
+    width: 50%; 
+    padding: 5px 5px; 
+    background-color: #cbebd71c;
+    margin: 10px 20px; 
+    font-size: 15px; 
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    color: #000000a9;
+    border-radius: 4px;
+    border: 1px solid #3e363f21;
+    cursor: pointer;
+}
 #error {
     color: red;
     font-weight: bold;
@@ -75,33 +90,39 @@ button:active {
 
 .resultado {
     color: #073a33;
-    font-weight: bold;
+    font-weight: bolder;
     font-size: 18px;
     margin: 15px;
     display: none;
+    border:#00000000 1px  solid;
+    padding: 5px;
 }
-
-#Holliday {
+#Holliday #superficie{
     font-weight: bold;
-}
-
-#superficie {
-    font-weight:bold;
 }
 
 #id {
     font-weight: bold;
-    display: none;
 }
 
-#flujo{
+#flujo #flujo_medio #volumen {
     font-weight: lighter;
 }
 
-#flujo_medio {
+#legend {
     font-weight: lighter;
+    text-align: left;
+    margin:0%;
+    color:#1a8055;
+    font-family: 'Montserrat', sans-serif;  
 }
 
-#volumen {
-    font-weight: lighter;
+#choice {
+    font-weight:lighter;
 }
+
+
+
+
+
+
